# ESP-Mailbox

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
include/: deep_sleep.h  logic_flow.h  mqtt.h  reedSwitch.h  ultrasonic_distance.h  wifi.h
src/: CMakeLists.txt  Kconfig.projbuild  deep_sleep.c  logic_flow.c  main.c  mqtt.c  reedSwitch.c  ultrasonic_distance.c  wifi.c
ulp/: reed_switch.S
